chooses identity color, background color, identity font color, and footer font color for the first time

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
 .App__header {
   height: 80px;
+  background-color: #7b181b;
+  color: #fff;
 }
 
 .App__main {
   min-height: calc(100vh - 80px);
+  background-color: #ECEDF2;
 }
 
 .App__footer {
   height: 80px;
+  color: #7b181b;
 }
