adds CONSIDER comment about changing background to background image in the future

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@
 .App__main {
   min-height: calc(100vh - 80px);
   background-color: #ECEDF2;
+  /* 
+    CONSIDER: adding popcorn background image
+    Code in next comment isn't optimal in all situations 
+  */
+  /* background: url("/bg-image.jpg") no-repeat center center fixed;
+  background-size: cover; */
 }
 
 .App__footer {
