--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -10,4 +10,6 @@ $c-neutral: #D7D8DC;
 $c-neutral-dark: #C2C2C7;
 
 // Breakpoint variables
-$lg: 1000px
+// Buttons
+$button-confirm-color: cornflowerblue;
+$button-confirm-color-hover: #527ac2;
