--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -10,6 +10,9 @@ $c-neutral: #D7D8DC;
 $c-neutral-dark: #C2C2C7;
 
 // Breakpoint variables
+$md: 600px;
+$lg: 1000px;
+
 // Buttons
 $button-confirm-color: cornflowerblue;
 $button-confirm-color-hover: #527ac2;
