--- a/src/components/MovieItem/MovieItem.scss
+++ b/src/components/MovieItem/MovieItem.scss
@@ -1,6 +1,9 @@
 @import '../../assets/variables.scss';
 @import '../../assets/mixins.scss';
 .movie-item {
+    // Needed for rating positioning
+    position:relative;
+
     border: 2px solid $c-neutral-dark;
     border-radius: 5px;
     // 1. Make picture grow to the title if it has to
@@ -11,6 +14,12 @@
         flex-direction: column;
         justify-content: space-between;
     }
+}
+
+.movie-item__rating {
+    position: absolute;
+    right: -23px;
+    top: -20px;
 }
 
 .movie-item__image-wrapper {
