minor code style fix - MovieList component

--- a/src/components/MovieList/MovieList.scss
+++ b/src/components/MovieList/MovieList.scss
@@ -6,7 +6,7 @@
     grid-gap: 20px;
     @include fromLg {
         grid-gap: 40px;
-        grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
+        grid-template-columns: repeat(3, minmax(0, 1fr));
     }
 }
 
