bugfix - adds variables and mixins import in RouleteMovieList.scss

--- a/src/containers/RouletteMovieList/RouletteMovieList.scss
+++ b/src/containers/RouletteMovieList/RouletteMovieList.scss
@@ -1,3 +1,7 @@
+@import '../../assets/variables.scss';
+@import '../../assets/mixins.scss';
+
+
 
 .roulette-movie-list__movie-list {
     margin-bottom: 25px;
