landing page styled

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -2,12 +2,13 @@
 $c-primary: #7b181b;
 $c-primary-light: #872D2F;
 $c-primary-dark: #701619;
-
 $c-primary-text: #fff;
 
 $c-neutral-light: #ECEDF2;
 $c-neutral: #D7D8DC;
 $c-neutral-dark: #C2C2C7;
+
+$c-text-light: #4f5959;
 
 // Breakpoint variables
 $md: 600px;
