--- a/src/containers/MainLoader/MainLoader.scss
+++ b/src/containers/MainLoader/MainLoader.scss
@@ -13,4 +13,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    background-color: rgba(0,0,0,0.6);
+    cursor: wait;
 }
