--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -15,5 +15,6 @@ $md: 600px;
 $lg: 1000px;
 
 // Buttons
-$button-confirm-color: cornflowerblue;
-$button-confirm-color-hover: #527ac2;
+$button-confirm-color: #6495ed;
+$button-confirm-color-light: #729eee;
+$button-confirm-color-dark: #527ac2;
