reorganizes main app as header + main + footer

--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -1,7 +1,7 @@
-@import 'assets/base.scss';
-@import 'assets/variables.scss';
-@import 'assets/mixins.scss';
-@import 'assets/icomoon/style.scss';
+@import '../../assets/base.scss';
+@import '../../assets/variables.scss';
+@import '../../assets/mixins.scss';
+@import '../../assets/icomoon/style.scss';
 
 .App__container {
   max-width: $lg;
