--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,10 @@
+@import '../node_modules/normalize.css/normalize.css';
+@import 'assets/icomoon/style.scss';
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +12,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0
 }
 
 code {
