refactors MovieItem - modularity

--- a/src/components/MovieList/MovieItem/Image/Image.module.scss
+++ b/src/components/MovieList/MovieItem/Image/Image.module.scss
@@ -1,5 +1,4 @@
-@import '../../assets/mixins';
-
+@import '../../../../assets/mixins';
 .image {
     position: absolute;
     width: calc(100% - 20px);
