--- a/src/components/MovieList/MovieItem/Image/Image.module.scss
+++ b/src/components/MovieList/MovieItem/Image/Image.module.scss
@@ -24,3 +24,18 @@
         height: 80px !important;
     }
 }
+
+.spinnerPart {
+    @include fromMd {
+        width: 32px !important;
+        height: 32px !important;
+        margin: 4px !important;
+        border-width: 4px !important;
+    }
+    @include fromLg{
+        width: 80px !important;
+        height: 80px !important;
+        margin: 8px !important;
+        border-width: 8px !important;
+    }
+}
