adds textDark color variable

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -8,6 +8,7 @@ $c-neutral-light: #ECEDF2;
 $c-neutral: #D7D8DC;
 $c-neutral-dark: #C2C2C7;
 
+$c-text-dark: #000000;
 $c-text-light: #4f5959;
 
 // Breakpoint variables
